[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/StarBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/Settings/SettingsScreen.gd" type="Script" id=2]
[ext_resource path="res://GUI/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/Buttons/BackButton.tscn" type="PackedScene" id=4]

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="StarBackground" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Fullscreen"

[node name="MuteToggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 280.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Mute"

[node name="BackButton" parent="." instance=ExtResource( 4 )]

[connection signal="toggled" from="VBoxContainer/FullscreenToggle" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="VBoxContainer/MuteToggle" to="." method="_on_Mute_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
